--- a/public/index.html
+++ b/public/index.html
@@ -4,10 +4,10 @@
   <meta charset="utf-8">
   <title>React App</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-<link href="/static/public/1bd2a0296194d63b75ce7727ddd3e517.css" rel="stylesheet"></head>
+</head>
 <body>
   <div class="container">
     <div id="app">Loading...</div>
   </div>
-<script type="text/javascript" src="/static/public/82a23cbfbf844b35be47.js"></script></body>
+<script type="text/javascript" src="/static/public/bundle.js"></script></body>
 </html>
